# chromaDB-mcp

./: .gitignore  README.md  data_dir_section.md  migrate_data.py  pyproject.toml
src/chroma_mcp/: __init__.py  server.py
