[project]
name = "chroma-mcp"
version = "0.1.0"
description = "A MCP server project for ChromaDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.1.2", "chromadb>=0.4.22", "sentence-transformers>=2.2.2"]
[[project.authors]]
name = "HumainLabs"
email = "contact@humainlabs.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
chroma-mcp = "chroma_mcp:main"
